# fortune

./: .gitignore  Cargo.toml  README.md  Rocket.toml
cli/: Cargo.toml
cli/deploy/: README.md
cli/src/: main.rs  options.rs
deploy/: README.md  fortuneapi.conf  fortuneapi.service
processor/: Cargo.toml
processor/src/: main.rs  options.rs
shared/: Cargo.toml
shared/src/: data_file.rs  fortune.rs  fortune_file_info.rs  fortune_stats.rs  lib.rs
shared/src/data_file/: flags.rs  header.rs
webservice/: Cargo.toml  Config.toml
webservice/deploy/: README.md  fortuneapi.conf
webservice/src/: cors.rs  fortune_config.rs  main.rs
