[package]
name = "data_file_gen"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
shared_library = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.37.0", features = ["full"] }
